tests/ui/discord-frontend/entity_macro/expected_literal_4.stderr
error: expected string literal
  --> tests/ui/discord-frontend/entity_macro/expected_literal_4.rs:36:11
   |
LL |     id = [true],
   |           ^^^^

error: aborting due to 1 previous error

